Fix no scrollbar issue

--- a/www/webui.css
+++ b/www/webui.css
@@ -20,7 +20,6 @@ body {
 
 .sh-page {
     width: 100%;
-    position: fixed;
 }
 
 /* Toggle Checkbox/Button
